# serializer version: 1
# name: test_delete_member[groups]
  'bar'
# ---
# name: test_delete_member[groups].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'id': 'baz',
      }),
    ]),
    'users': list([
      dict({
        'id': 'bar',
      }),
      dict({
        'id': 'baz',
      }),
    ]),
  })
# ---
# name: test_delete_member[users]
  'bar'
# ---
# name: test_delete_member[users].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'id': 'bar',
      }),
      dict({
        'id': 'baz',
      }),
    ]),
    'users': list([
      dict({
        'id': 'baz',
      }),
    ]),
  })
# ---
# name: test_edit_member[group-None]
  dict({
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  })
# ---
# name: test_edit_member[group-None].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      }),
    ]),
    'users': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
  })
# ---
# name: test_edit_member[group-reference]
  None
# ---
# name: test_edit_member[group-reference].1
  None
# ---
# name: test_edit_member[group-subdocument]
  None
# ---
# name: test_edit_member[group-subdocument].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
    'users': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
  })
# ---
# name: test_edit_member[user-None]
  dict({
    'build': True,
    'id': 'baz',
    'modify': False,
    'modify_otu': False,
    'remove': True,
  })
# ---
# name: test_edit_member[user-None].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
    'users': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': True,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': True,
      }),
    ]),
  })
# ---
# name: test_edit_member[user-reference]
  None
# ---
# name: test_edit_member[user-reference].1
  None
# ---
# name: test_edit_member[user-subdocument]
  None
# ---
# name: test_edit_member[user-subdocument].1
  dict({
    '_id': 'foo',
    'groups': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
    'users': list([
      dict({
        'build': False,
        'id': 'bar',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
      dict({
        'build': False,
        'id': 'baz',
        'modify': False,
        'modify_otu': False,
        'remove': False,
      }),
    ]),
  })
# ---
# name: test_fetch_and_update_release
  dict({
    'body': '''
      * Added many new isolates for existing viruses.
      * Added many new viruses.
      * Fixed naming for many viruses and isolates.
      * Removed all viruses with non-plant hosts.
    ''',
    'content_type': 'application/gzip',
    'download_url': 'https://github.com/virtool/ref-plant-viruses/releases/download/v1.5.0/reference.json.gz',
    'filename': 'v1.5.0',
    'html_url': 'https://github.com/virtool/ref-plant-viruses/releases/tag/v1.5.0',
    'id': 79005111,
    'name': 'v1.5.0',
    'newer': True,
    'published_at': '2022-10-04T22:47:33Z',
    'retrieved_at': datetime.datetime(2015, 10, 6, 20, 0),
    'size': 6449861,
  })
# ---
